Fix ui test