@@ -51,6 +51,13 @@ subprojects {
                 includeNoLocationClasses = true
                 excludes = jacocoExclusions
             }
+            jvmArgs += [
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.net=ALL-UNNAMED'
+            ]
         }
     }
 
